radix-engine-tests/tests/dec_macros/src/dec_err_expr_not_supported.stderr
error: This macro only supports string, integer and float literals.
 --> src/fail.rs:4:29
  |
4 |     const X: Decimal = dec!(a);
  |                             ^
